<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/currency_converter"
        android:layout_width="201dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency_converter"
        android:textColor="@color/purple"
        android:textSize="42sp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".60">
    </androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/From"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/From"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/currency_converter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/From_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/select_currency"
        app:startIconDrawable="@drawable/money"
        app:helperText=" * choose first"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/From"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">
        <AutoCompleteTextView
            android:id="@+id/dollar_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dollar_usd"
            android:inputType="none">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/To"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/to"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/From_menu"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/select_currency"
        app:startIconDrawable="@drawable/money"
        app:helperText=" * choose second"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/To"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">
        <AutoCompleteTextView
            android:id="@+id/egypt_pound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dollar_usd"
            android:inputType="none">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/amount"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/to_menu"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp">
    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Enter_Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/enter_amount"
        app:startIconDrawable="@drawable/money"
        app:endIconMode="clear_text"
        app:helperText=" * enter amount"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:inputType="number">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/convert_button"
        android:text="@string/convert"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/Enter_Amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </Button>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/result"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/convert_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp">
    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/result_Amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:hint="@string/the_result"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:startIconDrawable="@drawable/money"
        tools:visibility="visible">

    </com.google.android.material.textfield.TextInputEditText>


</androidx.constraintlayout.widget.ConstraintLayout>

